--- a/register/templates/register/user_form.html
+++ b/register/templates/register/user_form.html
@@ -16,6 +16,25 @@
                 <button type="submit" class="btn btn-outline-primary">保存</button>
             {% endbuttons %}
         </form>
+        <button style="float:right" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteModal" id="id_user_delete">ユーザーアカウント削除</button>
+        {# 削除を確認するモーダル ダイアログ #}
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">確認</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              </div>
+              <div class="modal-body">
+                <p>本当にユーザーアカウントを削除しますか？</p>
+              </div>
+              <div class="modal-footer">
+                <a href="{% url 'register:user_delete' user.pk %}" class="btn btn-outline-danger" id="del_url">OK</a>
+                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cancel</button>
+              </div>
+            </div>
+          </div>
+        </div>                                
     </div>
 </div>
 {% endblock %}
