--- a/sfa/templates/sfa/goalsetting_form.html
+++ b/sfa/templates/sfa/goalsetting_form.html
@@ -15,6 +15,7 @@
         </div>
         <div class="row">
             <div class="col-12">
+                <p>1週間の目標件数を設定してください。</p>
                 <form method="post" id="myform">
                     {% csrf_token %}
                     {% bootstrap_form form layout='horizontal' %}
