Placeholderの色を薄くした。

--- a/register/static/register/css/style.css
+++ b/register/static/register/css/style.css
@@ -1851,27 +1851,27 @@ pre code {
 }
 
 .form-control::-webkit-input-placeholder {
-  color: #73818f;
+  color: #cccccc;
   opacity: 1;
 }
 
 .form-control::-moz-placeholder {
-  color: #73818f;
+  color: #cccccc;
   opacity: 1;
 }
 
 .form-control:-ms-input-placeholder {
-  color: #73818f;
+  color: #cccccc;
   opacity: 1;
 }
 
 .form-control::-ms-input-placeholder {
-  color: #73818f;
+  color: #cccccc;
   opacity: 1;
 }
 
 .form-control::placeholder {
-  color: #73818f;
+  color: #cccccc;
   opacity: 1;
 }
 
